--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ config/secret_config.yaml
 
 # Ignore data files
 data/
+test.csv
+train.csv
 # Keep the external data if it's small and static, otherwise ignore
 # data/external/
 
